--- a/index.html
+++ b/index.html
@@ -1,1 +1,97 @@
-Hello Pro Care Fix ...
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="ProCareFix - Güvenilir Onarım ve Bakım Hizmetleri">
+  <title>ProCareFix | Repair and Maintenance Services</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#home">ProCareFix</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <header id="home" class="bg-primary text-white text-center py-5">
+    <div class="container">
+      <h1 class="display-4">ProCareFix</h1>
+      <p class="lead">Fast, reliable and professional repair services.</p>
+      <a href="#services" class="btn btn-light btn-lg">Discover Our Services</a>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="py-5">
+    <div class="container">
+      <h2 class="text-center">About Us</h2>
+      <p class="text-center text-muted mb-4">At ProCareFix, we offer the best repair and maintenance solutions for your devices.</p>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="https://via.placeholder.com/500" alt="Hakkımızda" class="img-fluid rounded">
+        </div>
+        <div class="col-md-6">
+<h3>Who Are We?</h3>
+<p>ProCareFix is ​​a team of experts in all types of electronic device repair and maintenance. Our goal is to satisfy our customers with fast and cost-effective solutions.</p>
+<p>Customer satisfaction is our top priority.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="bg-light py-5">
+    <div class="container">
+      <h2 class="text-center">Our Services</h2>
+      <div class="row text-center">
+        
+        <div class="col-md-4">
+          <div class="card border-0 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Computer maintenance and repair</h4>
+              <p class="card-text">Fast and reliable computer repair.</p>
+            </div>
+          </div>
+        </div>
+
+        
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-5">
+    <div class="container">
+      <h2 class="text-center">Contact</h2>
+      <p class="text-center text-muted mb-4">Contact Us.</p>
+      <p>procarefix@gmail.com</p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3">
+    <div class="container">
+      <p class="mb-0">© 2024 ProCareFix. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
