--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ProCareFix - Güvenilir Onarım ve Bakım Hizmetleri">
-  <title>ProCareFix | Repair and Maintenance Services</title>
+  <title>ProCareFix</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
@@ -30,8 +30,8 @@
   <!-- Hero Section -->
   <header id="home" class="bg-primary text-white text-center py-5">
     <div class="container">
-      <h1 class="display-4">ProCareFix</h1>
-      <p class="lead">Fast, reliable and professional repair services.</p>
+      <h1 class="display-4">Pro Care Fix</h1>
+      <p class="lead">Your One-Stop Solution for Repairs and Installations: Electronics, Electrical, Woodwork, Plumbing, and Computer Solutions</p>
       <a href="#services" class="btn btn-light btn-lg">Discover Our Services</a>
     </div>
   </header>
@@ -40,15 +40,22 @@
   <section id="about" class="py-5">
     <div class="container">
       <h2 class="text-center">About Us</h2>
-      <p class="text-center text-muted mb-4">At ProCareFix, we offer the best repair and maintenance solutions for your devices.</p>
       <div class="row">
         <div class="col-md-6">
           <img src="https://via.placeholder.com/500" alt="Hakkımızda" class="img-fluid rounded">
         </div>
         <div class="col-md-6">
 <h3>Who Are We?</h3>
-<p>ProCareFix is ​​a team of experts in all types of electronic device repair and maintenance. Our goal is to satisfy our customers with fast and cost-effective solutions.</p>
-<p>Customer satisfaction is our top priority.</p>
+<p>ProCareFix is your trusted partner for all types of repair and installation services. We specialize in:</p>
+<ul>
+  <li>Electronics: Repairs, installations, and maintenance of household and office devices.</li>
+  <li>Electrical Systems: Safe and reliable wiring, system setups, and troubleshooting.</li>
+  <li>Woodwork: Expert carpentry, paneling, and furniture repairs or enhancements.</li>
+  <li>Flooring: Professional installation and repair of flooring for a polished finish.</li>
+  <li>Plumbing: Efficient solutions for repairs, installations, and maintenance of water systems.</li>
+  <li>Computers: Formatting, basic troubleshooting, and setup services to keep you connected.</li>
+</ul>
+<p>At ProCareFix, we prioritize quality, efficiency, and customer satisfaction in every task. No matter the size or scope of your project, our skilled team is here to deliver exceptional results you can trust.</p>
         </div>
       </div>
     </div>
