--- a/index.html
+++ b/index.html
@@ -45,17 +45,11 @@
           <img src="https://via.placeholder.com/500" alt="Hakkımızda" class="img-fluid rounded">
         </div>
         <div class="col-md-6">
-<h3>Who Are We?</h3>
-<p>ProCareFix is your trusted partner for all types of repair and installation services. We specialize in:</p>
-<ul>
-  <li>Electronics: Repairs, installations, and maintenance of household and office devices.</li>
-  <li>Electrical Systems: Safe and reliable wiring, system setups, and troubleshooting.</li>
-  <li>Woodwork: Expert carpentry, paneling, and furniture repairs or enhancements.</li>
-  <li>Flooring: Professional installation and repair of flooring for a polished finish.</li>
-  <li>Plumbing: Efficient solutions for repairs, installations, and maintenance of water systems.</li>
-  <li>Computers: Formatting, basic troubleshooting, and setup services to keep you connected.</li>
-</ul>
-<p>At ProCareFix, we prioritize quality, efficiency, and customer satisfaction in every task. No matter the size or scope of your project, our skilled team is here to deliver exceptional results you can trust.</p>
+At ProCareFix, we are a team of skilled professionals dedicated to delivering top-quality repair and installation solutions. With a focus on precision, reliability, and customer satisfaction, we aim to make every project seamless and stress-free for our clients.
+
+<br/>Our mission is to provide efficient and affordable services tailored to meet the unique needs of both residential and commercial customers. Whether you need minor fixes or larger-scale installations, we bring expertise, attention to detail, and a commitment to excellence to every task we undertake.
+
+<br/>ProCareFix is more than a service provider—we are your trusted partner in maintaining and enhancing your home or workplace. Let us help you get the job done right!
         </div>
       </div>
     </div>
@@ -65,13 +59,54 @@
   <section id="services" class="bg-light py-5">
     <div class="container">
       <h2 class="text-center">Our Services</h2>
+      <p>ProCareFix is your trusted partner for all types of repair and installation services. We specialize in:</p>
       <div class="row text-center">
         
         <div class="col-md-4">
           <div class="card border-0 shadow">
             <div class="card-body">
-              <h4 class="card-title">Computer maintenance and repair</h4>
-              <p class="card-text">Fast and reliable computer repair.</p>
+              <h4 class="card-title">Electronics</h4>
+              <p class="card-text">Repairs, installations, and maintenance of household and office devices.</p>
+            </div>
+          </div>
+        </div>
+           <div class="col-md-4">
+          <div class="card border-0 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Electrical Systems</h4>
+              <p class="card-text">Safe and reliable wiring, system setups, and troubleshooting.</p>
+            </div>
+          </div>
+        </div>
+           <div class="col-md-4">
+          <div class="card border-0 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Woodwork</h4>
+              <p class="card-text">Expert carpentry, paneling, and furniture repairs or enhancements.</p>
+            </div>
+          </div>
+        </div>
+           <div class="col-md-4">
+          <div class="card border-0 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Flooring</h4>
+              <p class="card-text">Professional installation and repair of flooring for a polished finish.</p>
+            </div>
+          </div>
+        </div>
+           <div class="col-md-4">
+          <div class="card border-0 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Plumbing</h4>
+              <p class="card-text">Efficient solutions for repairs, installations, and maintenance of water systems.</p>
+            </div>
+          </div>
+        </div>
+           <div class="col-md-4">
+          <div class="card border-0 shadow">
+            <div class="card-body">
+              <h4 class="card-title">Computers</h4>
+              <p class="card-text">Formatting, basic troubleshooting, and setup services to keep you connected.</p>
             </div>
           </div>
         </div>
