--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>ProCareFix</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,24 +33,21 @@
     <div class="container">
       <h1 class="display-4">Pro Care Fix</h1>
       <p class="lead">Your One-Stop Solution for Repairs and Installations: Electronics, Electrical, Woodwork, Plumbing, and Computer Solutions</p>
-      <a href="#services" class="btn btn-light btn-lg">Discover Our Services</a>
+      <a href="#services" class="">Discover Our Services</a>
     </div>
   </header>
 
   <!-- About Section -->
   <section id="about" class="py-5">
     <div class="container">
-      <h2 class="text-center">About Us</h2>
+      <h2 class="text-center"><i class="bi bi-info-circle"></i> About Us</h2>
       <div class="row">
-        <div class="col-md-6">
-          <img src="https://via.placeholder.com/500" alt="Hakkımızda" class="img-fluid rounded">
-        </div>
-        <div class="col-md-6">
-At ProCareFix, we are a team of skilled professionals dedicated to delivering top-quality repair and installation solutions. With a focus on precision, reliability, and customer satisfaction, we aim to make every project seamless and stress-free for our clients.
+        <div class="col">
+<p class="text-center mb-4">At ProCareFix, we are a team of skilled professionals dedicated to delivering top-quality repair and installation solutions. With a focus on precision, reliability, and customer satisfaction, we aim to make every project seamless and stress-free for our clients.
+</p>
+<p class="text-center mb-4">Our mission is to provide efficient and affordable services tailored to meet the unique needs of both residential and commercial customers. Whether you need minor fixes or larger-scale installations, we bring expertise, attention to detail, and a commitment to excellence to every task we undertake.</p>
 
-<br/>Our mission is to provide efficient and affordable services tailored to meet the unique needs of both residential and commercial customers. Whether you need minor fixes or larger-scale installations, we bring expertise, attention to detail, and a commitment to excellence to every task we undertake.
-
-<br/>ProCareFix is more than a service provider—we are your trusted partner in maintaining and enhancing your home or workplace. Let us help you get the job done right!
+<p class="text-center mb-4">ProCareFix is more than a service provider—we are your trusted partner in maintaining and enhancing your home or workplace. Let us help you get the job done right!</p>
         </div>
       </div>
     </div>
@@ -58,11 +56,11 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
   <!-- Services Section -->
   <section id="services" class="bg-light py-5">
     <div class="container">
-      <h2 class="text-center">Our Services</h2>
-      <p>ProCareFix is your trusted partner for all types of repair and installation services. We specialize in:</p>
+      <h2 class="text-center"><i class="bi bi-person-lines-fill"></i> Our Services</h2>
+      <p class=text-center>ProCareFix is your trusted partner for all types of repair and installation services. We specialize in:</p>
       <div class="row text-center">
         
-        <div class="col-md-4">
+        <div class="col-md-4 p-2">
           <div class="card border-0 shadow">
             <div class="card-body">
               <h4 class="card-title">Electronics</h4>
@@ -70,7 +68,7 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
             </div>
           </div>
         </div>
-           <div class="col-md-4">
+           <div class="col-md-4 p-2">
           <div class="card border-0 shadow">
             <div class="card-body">
               <h4 class="card-title">Electrical Systems</h4>
@@ -78,7 +76,7 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
             </div>
           </div>
         </div>
-           <div class="col-md-4">
+           <div class="col-md-4 p-2">
           <div class="card border-0 shadow">
             <div class="card-body">
               <h4 class="card-title">Woodwork</h4>
@@ -86,7 +84,7 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
             </div>
           </div>
         </div>
-           <div class="col-md-4">
+           <div class="col-md-4 p-2">
           <div class="card border-0 shadow">
             <div class="card-body">
               <h4 class="card-title">Flooring</h4>
@@ -94,7 +92,7 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
             </div>
           </div>
         </div>
-           <div class="col-md-4">
+           <div class="col-md-4 p-2">
           <div class="card border-0 shadow">
             <div class="card-body">
               <h4 class="card-title">Plumbing</h4>
@@ -102,7 +100,7 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
             </div>
           </div>
         </div>
-           <div class="col-md-4">
+           <div class="col-md-4 p-2">
           <div class="card border-0 shadow">
             <div class="card-body">
               <h4 class="card-title">Computers</h4>
@@ -120,8 +118,8 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
   <section id="contact" class="py-5">
     <div class="container">
       <h2 class="text-center">Contact</h2>
-      <p class="text-center text-muted mb-4">Contact Us.</p>
-      <p>procarefix@gmail.com</p>
+      <p class="text-center text-muted">Contact Us.</p>
+      <p class="text-center text-muted mb-4"><i class="bi bi-envelope-at"></i> procarefix@gmail.com</p>
     </div>
   </section>
 
@@ -136,4 +134,3 @@ At ProCareFix, we are a team of skilled professionals dedicated to delivering to
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
