--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <!-- Contact Section -->
   <section id="contact" class="py-5">
     <div class="container">
-      <h2 class="text-center">Contact</h2>
+      <h2 class="text-center"><i class="bi bi-telephone-fill"></i> Contact</h2>
       <p class="text-center text-muted">Contact Us.</p>
       <p class="text-center text-muted mb-4"><i class="bi bi-envelope-at"></i> procarefix@gmail.com</p>
     </div>
