--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Services Section -->
   <section id="services" class="bg-light py-5">
     <div class="container">
-      <h2 class="text-center"><i class="bi bi-person-lines-fill"></i> Our Services</h2>
+      <h2 class="text-center"><i class="bi bi-person-lines"></i> Our Services</h2>
       <p class=text-center>ProCareFix is your trusted partner for all types of repair and installation services. We specialize in:</p>
       <div class="row text-center">
         
@@ -117,7 +117,7 @@
   <!-- Contact Section -->
   <section id="contact" class="py-5">
     <div class="container">
-      <h2 class="text-center"><i class="bi bi-telephone-fill"></i> Contact</h2>
+      <h2 class="text-center"><i class="bi bi-telephone"></i> Contact</h2>
       <p class="text-center text-muted">Contact Us.</p>
       <p class="text-center text-muted mb-4"><i class="bi bi-envelope-at"></i> procarefix@gmail.com</p>
     </div>
