--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Services Section -->
   <section id="services" class="bg-light py-5">
     <div class="container">
-      <h2 class="text-center"><i class="bi bi-person-lines"></i> Our Services</h2>
+      <h2 class="text-center"><i class="bi bi-list-check"></i> Our Services</h2>
       <p class=text-center>ProCareFix is your trusted partner for all types of repair and installation services. We specialize in:</p>
       <div class="row text-center">
         
